--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, cupcake;
+}
 
 :root {
   --background: #ffffff;
@@ -23,5 +25,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family:  'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
