Directory changes and Theme toggling fix
New files:
API - (list_directories)
1. handles Database query for local directories.
Component - (Directory_Header, Theme_Apply)
1. QueryclientProvider encapsulation and transfered styling from index/page to header.
2. Theme_Apply, simplifies application of themes on all app/layout.

Edit all layout to apply themes.
Note: all RootLayout are now async. may provide problems in the future.

Edit middleware to allow new API for list_directories.

Edit Directory to align with required plan and integration of list_directories API

MInor Edit on Global.css. need further refining of our themes. Trying to incoprorate KCC Logo (shades of blue) on our themes (ongoing implementation).

#ginalingan
-dash

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,23 @@
 @import "tailwindcss";
+
+
 @plugin "daisyui" {
-  themes: light , dark --prefersdark;
+  themes: light --default, dark --prefersdark;
 }
 
 @plugin "daisyui/theme" {
   name: "light";
-  --background: #ffffff;
-  --foreground: #171717;
-  --btn-color:  #1f429b;
-  --color-secondary: #1f429b;
+  --background: #ffffff ;
+  --foreground: #171717 ;
+  --btn-color: #1f429b ;
+  --color-secondary: #1f429b ;
 }
 
 @plugin "daisyui/theme" {
   name: "dark";
   --background: #0a0a0a;
   --foreground: #ededed;
-  --btn-color:  #1f429b;
+  --btn-color: #1f429b;
   --color-secondary: #03a6df;
 }
 
